# Modular-Agentic-Rag-using-fastapi-and-Streamlit-

./: .gitignore  README.md  main.py  pyproject.toml
client/: app.py
evaluation/: run_ragas.py
evaluation/datasets/: rag_samples.jsonl
server/: config.py  main.py
server/agent/: graph.py  state.py  tools.py
server/observability/: langsmith.py
server/rag/: loaders.py  vectorstore.py
shared/: models.py  utils.py
